# aam

./: .gitmodules  CMakeLists.txt  README.md
etc/: design.txt
examples/: appearancevariation.cpp  matching.cpp  shapemorph.cpp  showtrainingdata.cpp  training.cpp
inc/aam/: aam.h  barycentrics.h  bilinear.h  delaunay.h  dummy.h  fwd.h  io.h  map.h  matcher.h  matcher2.h  model.h  pca.h  procrustes.h  rasterization.h  show.h  trainer.h  trainingset.h  traits.h  transform.h  types.h  views.h
inc/aam/io/: aam.fbs  aam_generated.h  serialization.h
src/: delaunay.cpp  dummy.cpp  io.cpp  matcher.cpp  matcher2.cpp  model.cpp  pca.cpp  procrustes.cpp  rasterization.cpp  show.cpp  trainer.cpp  transform.cpp
src/io/: serialization.cpp
tests/: barycentrics.cpp  bilinear.cpp  config.h.in  delaunay.cpp  dummy.cpp  map.cpp  matching.cpp  pca.cpp  procrustes.cpp  random_distributions.h  rasterization.cpp  serialization.cpp  transform.cpp  views.cpp
